tests/baselines/reference/forStatementsMultipleInvalidDecl.errors.txt
tests/cases/conformance/statements/forStatements/forStatementsMultipleInvalidDecl.ts(32,10): error TS2403: Subsequent variable declarations must have the same type.  Variable 'a' must be of type '任意', but here has type '数字'.
tests/cases/conformance/statements/forStatements/forStatementsMultipleInvalidDecl.ts(33,10): error TS2403: Subsequent variable declarations must have the same type.  Variable 'a' must be of type '任意', but here has type '文字'.
tests/cases/conformance/statements/forStatements/forStatementsMultipleInvalidDecl.ts(34,10): error TS2403: Subsequent variable declarations must have the same type.  Variable 'a' must be of type '任意', but here has type 'C'.
tests/cases/conformance/statements/forStatements/forStatementsMultipleInvalidDecl.ts(35,10): error TS2403: Subsequent variable declarations must have the same type.  Variable 'a' must be of type '任意', but here has type 'D<文字>'.
tests/cases/conformance/statements/forStatements/forStatementsMultipleInvalidDecl.ts(36,10): error TS2403: Subsequent variable declarations must have the same type.  Variable 'a' must be of type '任意', but here has type '类为 M'.
tests/cases/conformance/statements/forStatements/forStatementsMultipleInvalidDecl.ts(39,10): error TS2403: Subsequent variable declarations must have the same type.  Variable 'b' must be of type 'I', but here has type 'C'.
tests/cases/conformance/statements/forStatements/forStatementsMultipleInvalidDecl.ts(40,10): error TS2403: Subsequent variable declarations must have the same type.  Variable 'b' must be of type 'I', but here has type 'C2'.
tests/cases/conformance/statements/forStatements/forStatementsMultipleInvalidDecl.ts(43,10): error TS2403: Subsequent variable declarations must have the same type.  Variable 'f' must be of type '(x: 文字) => 数字', but here has type '(x: 数字) => 文字'.
tests/cases/conformance/statements/forStatements/forStatementsMultipleInvalidDecl.ts(46,10): error TS2403: Subsequent variable declarations must have the same type.  Variable 'arr' must be of type '文字[]', but here has type '数字[]'.
tests/cases/conformance/statements/forStatements/forStatementsMultipleInvalidDecl.ts(47,10): error TS2403: Subsequent variable declarations must have the same type.  Variable 'arr' must be of type '文字[]', but here has type '(C | D<文字>)[]'.
tests/cases/conformance/statements/forStatements/forStatementsMultipleInvalidDecl.ts(50,10): error TS2403: Subsequent variable declarations must have the same type.  Variable 'arr2' must be of type 'D<文字>[]', but here has type 'D<数字>[]'.
tests/cases/conformance/statements/forStatements/forStatementsMultipleInvalidDecl.ts(53,10): error TS2403: Subsequent variable declarations must have the same type.  Variable 'm' must be of type '类为 M', but here has type '类为 A'.


==== tests/cases/conformance/statements/forStatements/forStatementsMultipleInvalidDecl.ts (12 errors) ====
    interface I {
        id: number;
    }
    
    class C implements I {
        id: number;
        valid: boolean;
    }
    
    class C2 extends C {
        name: string;
    }
    
    class D<T>{
        source: T;
        recurse: D<T>;
        wrapped: D<D<T>>
    }
    
    function F(x: string): number { return 42; }
    
    module M {
        export class A {
            name: string;
        }
    
        export function F2(x: number): string { return x.toString(); }
    }
    
    // all of these are errors
    for( var a: any;;){}
    for( var a = 1;;){}
             ~
!!! error TS2403: Subsequent variable declarations must have the same type.  Variable 'a' must be of type '任意', but here has type '数字'.
    for( var a = 'a string';;){}
             ~
!!! error TS2403: Subsequent variable declarations must have the same type.  Variable 'a' must be of type '任意', but here has type '文字'.
    for( var a = new C();;){}
             ~
!!! error TS2403: Subsequent variable declarations must have the same type.  Variable 'a' must be of type '任意', but here has type 'C'.
    for( var a = new D<string>();;){}
             ~
!!! error TS2403: Subsequent variable declarations must have the same type.  Variable 'a' must be of type '任意', but here has type 'D<文字>'.
    for( var a = M;;){}
             ~
!!! error TS2403: Subsequent variable declarations must have the same type.  Variable 'a' must be of type '任意', but here has type '类为 M'.
    
    for( var b: I;;){}
    for( var b = new C();;){}
             ~
!!! error TS2403: Subsequent variable declarations must have the same type.  Variable 'b' must be of type 'I', but here has type 'C'.
    for( var b = new C2();;){}
             ~
!!! error TS2403: Subsequent variable declarations must have the same type.  Variable 'b' must be of type 'I', but here has type 'C2'.
    
    for(var f = F;;){}
    for( var f = (x: number) => '';;){}
             ~
!!! error TS2403: Subsequent variable declarations must have the same type.  Variable 'f' must be of type '(x: 文字) => 数字', but here has type '(x: 数字) => 文字'.
    
    for(var arr: string[];;){}
    for( var arr = [1, 2, 3, 4];;){}
             ~~~
!!! error TS2403: Subsequent variable declarations must have the same type.  Variable 'arr' must be of type '文字[]', but here has type '数字[]'.
    for( var arr = [new C(), new C2(), new D<string>()];;){}
             ~~~
!!! error TS2403: Subsequent variable declarations must have the same type.  Variable 'arr' must be of type '文字[]', but here has type '(C | D<文字>)[]'.
    
    for(var arr2 = [new D<string>()];;){}
    for( var arr2 = new Array<D<number>>();;){}
             ~~~~
!!! error TS2403: Subsequent variable declarations must have the same type.  Variable 'arr2' must be of type 'D<文字>[]', but here has type 'D<数字>[]'.
    
    for(var m: typeof M;;){}
    for( var m = M.A;;){}
             ~
!!! error TS2403: Subsequent variable declarations must have the same type.  Variable 'm' must be of type '类为 M', but here has type '类为 A'.